aws_team1_eks-config/templates/fake-service-examples/fs-ns-noconsul/api.yaml

kind: Namespace
apiVersion: v1
metadata:
  name: api
  labels:
    name: api
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: api
spec:
  selector:
    app: api
  ports:
    - port: 9091
      targetPort: 9091
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment-v1
  namespace: api
  labels:
    app: api
    version: v1
    service: fake-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      namespace: api
      labels:
        app: api
        service: fake-service
      annotations:
    spec:
      serviceAccountName: api
      containers:
        - name: api
          image: nicholasjackson/fake-service:v0.21.0
          ports:
            - containerPort: 9091
