aws_team1_eks-config/templates/fake-service-examples/fs-ns-noconsul/cache.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: cache-ns
  labels:
    name: cache
---
apiVersion: v1
kind: Service
metadata:
  name: cache
  namespace: cache-ns
spec:
  selector:
    app: cache
  ports:
    - port: 9090
      targetPort: 9090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache
  namespace: cache-ns
  labels:
    app: cache
    service: fake-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
        service: fake-service
      annotations:
    spec:
      serviceAccountName: cache
      containers:
        - name: cache
          image: nicholasjackson/fake-service:v0.21.0
          ports:
            - containerPort: 9090
