aws_team1_eks-config/templates/fake-service-examples/fs-ns-noconsul/currency.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: currency-ns
  labels:
    name: cache
---
apiVersion: v1
kind: Service
metadata:
  name: currency
  namespace: currency-ns
spec:
  selector:
    app: currency
  ports:
    - port: 9090
      targetPort: 9090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency
  namespace: currency-ns
  labels:
    app: currency
    service: fake-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: currency
  template:
    metadata:
      labels:
        app: currency
        service: fake-service
      annotations:
    spec:
      serviceAccountName: currency
      containers:
        - name: currency
          image: nicholasjackson/fake-service:v0.21.0
          ports:
            - containerPort: 9090
