aws_team1_eks-config/templates/fake-service-examples/fs-ns-noconsul/payments.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: payments-ns
  labels:
    name: payments
---
apiVersion: v1
kind: Service
metadata:
  name: payments
  namespace: payments-ns
spec:
  selector:
    app: payments
  ports:
    - port: 9090
      targetPort: 9090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments
  namespace: payments-ns
  labels:
    app: payments
    service: fake-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
      annotations:
    spec:
      serviceAccountName: payments
      containers:
        - name: payments
          image: nicholasjackson/fake-service:v0.21.0
          ports:
            - containerPort: 9090
